--- a/assets/scss/shared-ui/_variables.scss
+++ b/assets/scss/shared-ui/_variables.scss
@@ -288,6 +288,8 @@ $onboard: (
 	button-md: 30px,
 ) !default;
 
+$browser-scrollbar-width: 17px !default;
+
 // ============================================================
 // Toggles (_toggles.scss)
 
